ci(release): 更新发布流程和包配置
- 修改 beta 版本安装命令
- 增加检查是否需要发布版本的步骤
- 更新 NPM 发布配置
- 修正包名称和添加发布配置到 package.json

--- a/.github/workflows/release-beta.yaml
+++ b/.github/workflows/release-beta.yaml
@@ -135,7 +135,7 @@ jobs:
 
             你可以通过以下命令安装该版本：
             ```
-            pnpm install meme-generator-node@${{ needs.beta-version.outputs.beta_version }}
+            pnpm install GitToolki@${{ needs.beta-version.outputs.beta_version }}
             ```
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
