--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,8 +11,25 @@ permissions:
   id-token: write
 
 jobs:
+  check-release:
+    runs-on: ubuntu-latest
+    outputs:
+      should_release: ${{ env.SHOULD_RELEASE }}
+    steps:
+      - name: 检查是否需要进行版本更新
+        id: check
+        env:
+            LATEST_COMMIT_MESSAGE: ${{ github.event.workflow_run.head_commit.message }}
+        run: |
+          if [[ "$LATEST_COMMIT_MESSAGE" =~ ^release:\ 发布版本.* ]]; then
+              echo "SHOULD_RELEASE=true" >> $GITHUB_ENV
+          else
+              echo "SHOULD_RELEASE=false" >> $GITHUB_ENV
+          fi
+
   push-tag:
-    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/v')
+    needs: [check-release]
+    if: needs.check-release.outputs.should_release == 'true'
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.extract_version.outputs.version }}
@@ -91,9 +108,10 @@ jobs:
           run_install: |
             - args: [--global, husky]
 
-      - name: 发布预览版到 npm
+      - name: 发布到 NPM
         uses: JS-DevTools/npm-publish@v3
         with:
           token: ${{ secrets.NPM_TOKEN }}
+          registry: https://registry.npmjs.org/
           access: public
           provenance: true
