ci(release): 更新发布流程和包配置
- 修改 beta 版本安装命令
- 增加检查是否需要发布版本的步骤
- 更新 NPM 发布配置
- 修正包名称和添加发布配置到 package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GitToolkit",
+  "name": "git-neko-kit",
   "version": "1.0.0",
   "description": "Github, Gitee, GitCode API封装库",
   "author": "wuliya",
@@ -9,6 +9,10 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ClarityJS/GitToolkit.git"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   },
   "scripts": {
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json && cpy package.json README.md LICENSE .env dist/",
