refactor(typescript): 重构类型定义和全局变量声明
- 移除 global.d.ts 文件，改为在 env.d.ts 中声明全局变量
- 更新 logger 实例的导出方式
- 调整 tsconfig.json 中的类型根目录配置

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,7 @@ jobs:
           pnpm build:cli
           mkdir -p ${{ runner.temp }}/temp/dist
           cp -r dist/* ${{ runner.temp }}/temp/dist/
-          cp -r package.json env ${{ runner.temp }}/temp/
+          cp -r package.json .env ${{ runner.temp }}/temp/
 
       - name: 获取主分支的最新提交消息
         id: commit-message
