--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -64,7 +64,7 @@ jobs:
       - name: 检出代码
         uses: actions/checkout@v4
         with:
-          ref: build
+          ref: main
 
       - name: 获取变更内容
         id: extract_changelog
@@ -76,6 +76,11 @@ jobs:
           echo "changelog<<EOF" >> "$GITHUB_OUTPUT"
           echo "$CHANGELOG" >> "$GITHUB_OUTPUT"
           echo "EOF" >> "$GITHUB_OUTPUT"
+            - name: 检出代码
+
+      - uses: actions/checkout@v4
+        with:
+          ref: build
       
       - name: 构建产物
         run: |
