--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json && cpy package.json README.md LICENSE .env dist/",
     "build:cli": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "start": "node dist/index.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "dev": "cross-env RUNTIME=development tsx src/index.ts",
     "dev:test": "cross-env RUNTIME=development tsx test/index.ts"
   },
