refactor(eslint): 重构 ESLint 配置并更新相关设置
- 将 ESLint 配置文件从 eslint.config.cjs 重命名为 eslint.config.js
- 更新 ESLint 配置，使用 neostandard 规则替代 @stylistic
- 调整 ESLint 配置中的文件路径和解析选项
- 更新 .gitignore 和 package.json 中的相关条目
- 简化 logger 配置，移除不必要的日志文件输出

--- a/.github/workflows/release-beta.yaml
+++ b/.github/workflows/release-beta.yaml
@@ -110,15 +110,18 @@ jobs:
       - name: 构建
         run: |
           pnpm build
-          mkdir -p ${{ runner.temp }}/temp/dist
-          cp -r dist/* ${{ runner.temp }}/temp/dist/
-          cp -r package.json README.md CHANGELOG.md .env config/* ${{ runner.temp }}/temp/
+          pnpm pkg delete devDependencies
+          mkdir -p ${{ runner.temp }}/temp/
+          cp -r dist/* ${{ runner.temp }}/temp/
+          cp -r package.json README.md CHANGELOG.md .env dist ${{ runner.temp }}/temp/
       
       - name: 构建文件
         run: |
-          mv .git ${{ runner.temp }}/temp/.git
-          cd ${{ runner.temp }}/temp/
-          pnpm pkg delete devDependencies
+          if [ "$(git ls-files | wc -l)" -gt 0 ]; then
+            git rm -rf .
+          fi
+          cp -r ${{ runner.temp }}/temp/* ./
+          rm -rf node_modules pnpm-lock.yaml
       
       - name: 获取主分支的最新提交消息
         id: commit-message
