--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -46,42 +46,20 @@ jobs:
         run: |
           pnpm build
           pnpm pkg delete devDependencies
-          mkdir -p ${{ runner.temp }}/temp/
-          cp -r package.json README.md CHANGELOG.md .env dist ${{ runner.temp }}/temp/
-      
-      - name: 构建文件
-        run: |
-          if [ "$(git ls-files | wc -l)" -gt 0 ]; then
-            git rm -rf .
-          fi
-          cp -r ${{ runner.temp }}/temp/* ./
-          rm -rf node_modules pnpm-lock.yaml
+          mkdir -p temp
+          cp -r package.json README.md CHANGELOG.md .env dist temp/
+          cd temp
       
       - name: 获取主分支的最新提交消息
         id: commit-message
         run: |
           echo "commit_msg=$(git log origin/${{ github.ref_name }} -1 --pretty=format:'%s')" >> $GITHUB_ENV
 
-      - name: 提交并推送更改
-        uses: actions-js/push@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          message: "${{ env.commit_msg }}"
-          empty: true
-          amend: true
-          force: true
-          branch: "build"
-
   publish-npm:
     runs-on: ubuntu-latest
     needs: [release, build]
     if: needs.release.outputs.releases_created == 'true'
     steps:
-      - name: 检出代码
-        uses: actions/checkout@v4
-        with:
-          ref: build
-
       - name: 发布到 NPM
         uses: JS-DevTools/npm-publish@v3
         with:
