--- a/.github/workflows/release-beta.yaml
+++ b/.github/workflows/release-beta.yaml
@@ -114,7 +114,7 @@ jobs:
           mkdir -p ${{ runner.temp }}/temp/
           cp -r package.json README.md CHANGELOG.md .env dist ${{ runner.temp }}/temp/
 
-      - name: 上传构建文件
+      - name: 上传构建产物
         uses: actions/upload-artifact@v4
         with:
           name: ${{ needs.beta-version.outputs.package_name }}
@@ -134,7 +134,7 @@ jobs:
         with:
           version: 9.13.2
       
-      - name: 导入构建文件
+      - name: 导入构建产物
         uses: actions/download-artifact@v4
         with:
           name: ${{ needs.beta-version.outputs.package_name }}
