--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -58,7 +58,7 @@ jobs:
       - name: 上传构建产物
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.package_name }}
+          name: ${{ env.PACKAGE_NAME }}
           path: ${{ runner.temp }}/temp/
       
       - name: 获取主分支的最新提交消息
@@ -85,4 +85,3 @@ jobs:
           access: public
           provenance: true
 
-          
