refactor: 重构项目并优化代码
- 修改构建流程，使用 tsup 替代 tsc 和 tsc-alias
- 更新代码结构，增加 utils 和 root 模块
- 调整 GitHub API 调用方式
- 更新类型定义，增加 RepoInfoType 和 RepoParamType
- 修改环境变量声明文件
- 更新 ESLint 配置
- 清理不必要的依赖项

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -50,7 +50,7 @@ jobs:
           pnpm build
           pnpm pkg delete devDependencies
           mkdir -p ${{ runner.temp }}/temp/
-          cp -r package.json README.md CHANGELOG.md .env dist ${{ runner.temp }}/temp/
+          cp -r package.json README.md CHANGELOG.md dist ${{ runner.temp }}/temp/
           PACKAGE_NAME=$(pnpm pkg get name | tr -d '"')
           echo "PACKAGE_NAME=$PACKAGE_NAME" >> $GITHUB_ENV
           echo "PACKAGE_NAME=$PACKAGE_NAME" >> $GITHUB_OUTPUT
