--- a/.github/workflows/release-beta.yaml
+++ b/.github/workflows/release-beta.yaml
@@ -112,7 +112,7 @@ jobs:
           pnpm build
           pnpm pkg delete devDependencies
           mkdir -p ${{ runner.temp }}/temp/
-          cp -r package.json README.md CHANGELOG.md .env dist ${{ runner.temp }}/temp/
+          cp -r package.json README.md CHANGELOG.md dist ${{ runner.temp }}/temp/
 
       - name: 上传构建产物
         uses: actions/upload-artifact@v4
