--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
     "url": "git+https://github.com/ClarityJS/git-neko-kit.git"
   },
   "scripts": {
-    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json && cpy package.json README.md LICENSE .env dist/",
-    "build:cli": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+    "build": "tsc --noEmit && tsup --config tsup.config.ts",
     "start": "node dist/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "cross-env RUNTIME=development tsx src/test/index.ts",
-    "dev": "cross-env RUNTIME=development tsx src/index.ts",
-    "dev:test": "cross-env RUNTIME=development tsx test/index.ts"
+    "dev": "tsx src/index.ts",
+    "dev:test": "tsx test/index.ts"
   },
   "keywords": [
     "git",
@@ -29,34 +27,30 @@
   "license": "GNU AGPL-3.0",
   "dependencies": {
     "axios": "^1.8.4",
-    "chalk": "^5.4.1",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "hosted-git-info": "^8.0.2",
+    "git-url-parse": "^16.0.1",
     "jsonwebtoken": "^9.0.2",
     "log4js": "^6.9.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@types/cli-progress": "^3.11.6",
-    "@types/express": "^5.0.1",
-    "@types/express-fileupload": "^1.5.1",
-    "@types/hosted-git-info": "^3.0.5",
+    "@types/git-url-parse": "^9.0.3",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.13",
-    "cpy-cli": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
+    "eslint": "^9.23.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.0.0",
     "neostandard": "^0.12.1",
     "tsc-alias": "^1.8.11",
+    "tsup": "^8.4.0",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.28.0"
   },
   "files": [
     "dist/*",
     "package.json",
-    ".env",
     "README.md",
     "CHANGELOG.md"
   ],
