refactor(github): 重构 Github App 授权流程
- 移除 App、Auth 和 Install 类中的 state_id 属性
- 更新 create_auth_link 和 create_install_link 方法，使其接受可选的 state_id 参数
- 删除 GitHub 类中的 getStateId 和 create_state 方法
- 调整导入信息，移除 uuid 引用

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -76,6 +76,7 @@ jobs:
         with:
           name: ${{ needs.build.outputs.package_name }}
           path: ./
+          flatten: true
 
       - name: 发布到 NPM
         uses: JS-DevTools/npm-publish@v3
