--- a/.github/workflows/release-beta.yaml
+++ b/.github/workflows/release-beta.yaml
@@ -139,6 +139,7 @@ jobs:
         with:
           name: ${{ needs.beta-version.outputs.package_name }}
           path: ./
+          flatten: true
 
       - name: 发布预览版
         run: |
