ci(release): 在发布流程中添加测试步骤
- 在 GitHub Actions 的 release workflow 中添加了一个名为"测试"的新步骤
- 该步骤运行简单的 ls 命令，用于验证发布流程的当前状态

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -77,6 +77,9 @@ jobs:
           name: ${{ needs.build.outputs.package_name }}
           path: ./
 
+      - name: 测试
+        run: ls
+
       - name: 发布到 NPM
         uses: JS-DevTools/npm-publish@v3
         with:
