ci: 调整 release 工作流中的输出定义位置
- 将 package_name 输出从 release 步骤移至 build 步骤
- 在 build 步骤中添加 package_name 输出定义
- 优化工作流结构，使输出定义更加清晰和合理

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,7 +16,6 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       releases_created: ${{ steps.release-please.outputs.releases_created }}
-      package_name: ${{ steps.build-package.PACKAGE_NAME }}
 
     steps:
       - name: 运行 release-please-action
@@ -27,6 +26,8 @@ jobs:
           manifest-file: .release-please-manifest.json
 
   build:
+    outputs:
+      package_name: ${{ steps.build-package.outputs.package_name }}
     needs: release
     if: needs.release.outputs.releases_created == 'true'
     runs-on: ubuntu-latest
