--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   "dependencies": {
     "axios": "^1.8.4",
     "git-url-parse": "^16.0.1",
-    "jsonwebtoken": "^9.0.2"
+    "http-proxy-agent": "^7.0.2",
+    "https-proxy-agent": "^7.0.6",
+    "jsonwebtoken": "^9.0.2",
+    "socks-proxy-agent": "^8.0.5"
   },
   "devDependencies": {
     "@types/git-url-parse": "^9.0.3",
