build(tsup): 调整目标 ECMAScript 版本为 Node.js 22

--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
   "exports": {
     ".": {
       "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.cjs"
     }
   },
   "packageManager": "pnpm@9.13.2"
