docs: 优化代码结构并添加文档生成配置
- 在 eslint 配置中添加 docs 目录忽略项
- 在 package.json 中添加 typedoc 相关依赖
- 更新 src 目录下多个文件的注释，提高代码可读性
- 新增 typedoc.json 配置文件，用于生成项目文档

--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "tsc-alias": "^1.8.11",
     "tsup": "^8.4.0",
     "tsx": "^4.19.3",
+    "typedoc": "^0.28.1",
+    "typedoc-plugin-markdown": "^4.6.1",
+    "typedoc-plugin-missing-exports": "^4.0.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.28.0"
   },
