refactor(github): 重构 GitHub 相关代码
- 修改请求成功和异常的判断条件
- 优化 API 响应类型定义
- 调整 GitHub App 信息获取逻辑
- 修正 OAuth Token 获取和刷新相关错误处理
- 统一错误信息格式
- 移除不必要的状态码检查配置

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "start": "node dist/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "dev": "tsx src/index.ts",
-    "dev:test": "tsx test/index.ts"
+    "dev": "tsx src/index.ts"
   },
   "keywords": [
     "git",
