--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start": "node dist/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "dev": "tsx src/index.ts"
+    "dev": "tsx src/index.ts",
+    "test": "tsx test/index.js"
   },
   "keywords": [
     "git",
@@ -30,7 +31,8 @@
     "http-proxy-agent": "^7.0.2",
     "https-proxy-agent": "^7.0.6",
     "jsonwebtoken": "^9.0.2",
-    "socks-proxy-agent": "^8.0.5"
+    "socks-proxy-agent": "^8.0.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/git-url-parse": "^9.0.3",
