feat(github): 实现通过访问令牌获取用户信息的方法
- 完成了 User 类中 get_user_info_by_token 方法的实现
- 添加了对 401 和 404 错误的处理
- 对用户创建时间和更新时间进行了格式化处理
- 优化了错误处理和异常抛出的逻辑

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "dev": "tsx src/index.ts",
-    "test": "tsx test/index.js"
+    "test": "tsx test/index.ts"
   },
   "keywords": [
     "git",
