--- a/.github/workflows/release-beta.yaml
+++ b/.github/workflows/release-beta.yaml
@@ -2,12 +2,6 @@ name: 发布预览版
 
 on:
   workflow_dispatch:
-    pull_request:
-  push:
-    branches:
-      - "!main"
-    tags:
-      - "!**"
 
 permissions:
   contents: write
@@ -129,6 +123,24 @@ jobs:
     needs: [beta-version, build]
     runs-on: ubuntu-latest
     steps:
+      - name: 获取token
+        uses: actions/create-github-app-token@v2
+        id: app-token
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.PRIVATE_KEY }}
+
+      - name: 获取用户ID
+        id: get-user-id
+        run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+
+      - name: 设置用户信息
+        run: |
+          git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
+          git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com'
+
       - name: 设置 pnpm
         uses: pnpm/action-setup@v4
         with:
@@ -174,7 +186,7 @@ jobs:
             ```
             pnpm install https://pkg.pr.new/${{ needs.beta-version.outputs.package_name }}@${{ needs.beta-version.outputs.short_commit_hash }}
             ```
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ steps.app-token.outputs.token }}
 
       - name: 上传NPM包信息
         uses: actions/upload-artifact@v4
