--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "license": "GNU AGPL-3.0",
   "dependencies": {
     "axios": "^1.8.4",
+    "dayjs": "^1.11.13",
     "git-url-parse": "^16.0.1",
     "http-proxy-agent": "^7.0.2",
     "https-proxy-agent": "^7.0.6",
