ci(deploy): 将部署目标从 GitHub Pages 更改为 Cloudflare Pages
- 使用 WalshyDev/cf-pages-await@v1 替代 peaceiris/actions-gh-pages@v4
- 添加 Cloudflare 相关配置，包括 apiToken、accountId 和 project
- 保留 githubToken 以供使用

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: GitHub Pages
+name: Deploy Pages
 
 on:
   push:
@@ -7,8 +7,6 @@ on:
 
 permissions:
   contents: read
-  pages: write
-  id-token: write
 
 jobs:
   deploy:
@@ -48,8 +46,14 @@ jobs:
         run: |
           pnpm build:docs
 
-      - name: 部署到 GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+      - name: 部署到 Cloudflare Pages
+        uses: AdrianGonz97/refined-cf-pages-action@v1
         with:
-          github_token: ${{ steps.app-token.outputs.token }}
-          publish_dir: docs/.vuepress/dist
+          apiToken: ${{ secrets.CF_TOKEN  }}
+          accountId: ${{ secrets.CF_ID  }}
+          githubToken: ${{ steps.app-token.outputs.token }}
+          projectName: 'git-neko-kit'
+          directory: 'docs/.vuepress/dist'
+          deploymentName: cloudflare-pages
+          branch: main
+          wranglerVersion: '3'
