--- a/.github/workflows/release-beta.yaml
+++ b/.github/workflows/release-beta.yaml
@@ -1,6 +1,11 @@
 name: 发布预览版
 
 on:
+  push:
+    branches:
+      - main
+  pull_request:
+    types: [opened, reopened, synchronize]
   workflow_dispatch:
 
 permissions:
@@ -14,7 +19,6 @@ jobs:
     outputs:
       beta_version: ${{ steps.set-version.outputs.BETA_VERSION }}
       short_commit_hash: ${{ steps.get-sha.outputs.SHORT_COMMIT_HASH }}
-      pr_number: ${{ steps.get-pr-number.outputs.PR_NUMBER }}
       build_timestamp: ${{ steps.get-build-timestamp.outputs.BUILD_TIMESTAMP }}
       package_name: ${{ steps.set-version.outputs.PACKAGE_NAME }}
 
@@ -23,7 +27,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.ref_name }}
+          ref: ${{ github.event.pull_request.head.ref || github.ref_name }}
 
       - name: 设置 pnpm
         uses: pnpm/action-setup@v4
@@ -33,8 +37,9 @@ jobs:
       - name: 生成 Beta 版本号
         id: set-version
         run: |
-          git fetch origin ${{ github.ref_name }} --depth=100
-          git checkout ${{ github.ref_name }}
+          branch=${{ github.event.pull_request.head.ref || github.ref_name }}
+          git fetch origin $branch --depth=100
+          git checkout $branch
           VERSION=$(pnpm pkg get version | tr -d '"')
           BETA_VERSION="$VERSION-beta.$(date +%s)"
           PACKAGE_NAME=$(pnpm pkg get name | tr -d '"')
@@ -47,43 +52,25 @@ jobs:
       - name: 获取分支的最新提交哈希
         id: get-sha
         run: |
-          BRANCH=${{ github.ref_name }}
-          git fetch --depth=1 origin $BRANCH
+          branch=${{ github.event.pull_request.head.ref || github.ref_name }}
+          git fetch --depth=1 origin $branch
           SHORT_COMMIT_HASH=$(git rev-parse --short FETCH_HEAD)
           echo "SHORT_COMMIT_HASH=$SHORT_COMMIT_HASH" >> $GITHUB_ENV
           echo "SHORT_COMMIT_HASH=$SHORT_COMMIT_HASH" >> $GITHUB_OUTPUT
-          echo "分支 $BRANCH 的最新短哈希为: $SHORT_COMMIT_HASH"
+          echo "分支 $branch 的最新短哈希为: $SHORT_COMMIT_HASH"
 
       - name: 获取构建时间
         id: get-build-timestamp
         run: |
-          git fetch origin ${{ github.ref_name }} --depth=1
-          BUILD_TIMESTAMP_UTC=$(git show -s --format=%cd --date=iso-strict origin/${{ github.ref_name }})
+          branch=${{ github.event.pull_request.head.ref || github.ref_name }}
+          git fetch origin $branch --depth=1
+          BUILD_TIMESTAMP_UTC=$(git show -s --format=%cd --date=iso-strict origin/$branch)
           echo "BUILD_TIMESTAMP_UTC=$BUILD_TIMESTAMP_UTC"
           BUILD_TIMESTAMP=$(TZ=Asia/Shanghai date -d "$BUILD_TIMESTAMP_UTC" +"%Y-%m-%d %H:%M:%S")
 
           echo "BUILD_TIMESTAMP=$BUILD_TIMESTAMP" >> $GITHUB_ENV
           echo "BUILD_TIMESTAMP=$BUILD_TIMESTAMP" >> $GITHUB_OUTPUT
           echo "构建时间: $BUILD_TIMESTAMP"
-
-      - name: 获取 PR 编号
-        id: get-pr-number
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          echo "正在查找与版本发布分支相关的 PR..."
-          
-          PR_NUMBER=$(gh pr list --state open --json number,headRefName --jq '[.[] | select(.headRefName | startswith("release-please--branches--main--components--${{ env.package_name }}"))] | .[0].number')
-
-          if [[ -z "$PR_NUMBER" || "$PR_NUMBER" == "null" ]]; then
-            echo "未找到开放状态的相关 PR"
-            PR_NUMBER=""
-          else
-            echo "找到的 PR 编号: $PR_NUMBER"
-          fi
-
-          echo "PR_NUMBER=$PR_NUMBER" >> $GITHUB_ENV
-          echo "PR_NUMBER=$PR_NUMBER" >> $GITHUB_OUTPUT
 
   build:
     needs: beta-version
@@ -92,7 +79,7 @@ jobs:
       - name: 检出代码
         uses: actions/checkout@v4
         with:
-          ref: main
+          ref: ${{ github.event.pull_request.head.ref || github.ref_name }}
 
       - name: 设置 pnpm
         uses: pnpm/action-setup@v4
@@ -117,7 +104,7 @@ jobs:
       - name: 获取主分支的最新提交消息
         id: commit-message
         run: |
-          echo "commit_msg=$(git log origin/${{ github.ref_name }} -1 --pretty=format:'%s')" >> $GITHUB_ENV
+          echo "commit_msg=$(git log origin/${{ github.event.pull_request.head.ref || github.ref_name }} -1 --pretty=format:'%s')" >> $GITHUB_ENV
 
   publish-to-pkg-pr-new:
     needs: [beta-version, build]
@@ -174,19 +161,19 @@ jobs:
 
 
       - name: 发布 PR 评论
-        if: ${{ needs.beta-version.outputs.pr_number != '' }}
+        if: github.event_name == 'pull_request'
         uses: thollander/actions-comment-pull-request@v3
         with:
-          pr-number: ${{ needs.beta-version.outputs.pr_number }}
+          github-token: ${{ steps.app-token.outputs.token }}
+          pr-number: ${{ github.event.pull_request.number }}
           message: |
             🎉 🎉 🎉 **构建完成！**
-            该版本是基于 `${{ github.ref_name }}` 分支的快照 [**`${{ needs.beta-version.outputs.short_commit_hash }}`**](https://github.com/${{ github.repository }}/commit/${{ needs.beta-version.outputs.short_commit_hash }}) 所构建的。
+            该版本是基于 `${{ github.event.pull_request.head.ref || github.ref_name }` 分支的快照 [**`${{ needs.beta-version.outputs.short_commit_hash }}`**](https://github.com/${{ github.repository }}/commit/${{ needs.beta-version.outputs.short_commit_hash }}) 所构建的。
 
             你可以通过以下命令安装该版本：
             ```
             pnpm install https://pkg.pr.new/${{ needs.beta-version.outputs.package_name }}@${{ needs.beta-version.outputs.short_commit_hash }}
             ```
-          github-token: ${{ steps.app-token.outputs.token }}
 
       - name: 上传NPM包信息
         uses: actions/upload-artifact@v4
