ci(release): 更新发布流程并移除 CHANGELOG.md
- 从构建产物中移除了 CHANGELOG.md 文件
- 在发布到 NPM 后，增加了发布到 GitHub Packages 的步骤
- 添加了设置包名和发布到 GitHub Packages 的相关配置

--- a/.github/workflows/release-beta.yaml
+++ b/.github/workflows/release-beta.yaml
@@ -93,7 +93,7 @@ jobs:
           pnpm build
           pnpm pkg delete devDependencies
           mkdir -p ${{ runner.temp }}/temp/
-          cp -r package.json README.md CHANGELOG.md dist ${{ runner.temp }}/temp/
+          cp -r package.json README.md dist ${{ runner.temp }}/temp/
 
       - name: 上传构建产物
         uses: actions/upload-artifact@v4
@@ -168,7 +168,7 @@ jobs:
           pr-number: ${{ github.event.pull_request.number }}
           message: |
             🎉 🎉 🎉 **构建完成！**
-            该版本是基于 `${{ github.event.pull_request.head.ref || github.ref_name }` 分支的快照 [**`${{ needs.beta-version.outputs.short_commit_hash }}`**](https://github.com/${{ github.repository }}/commit/${{ needs.beta-version.outputs.short_commit_hash }}) 所构建的。
+            该版本是基于 `${{ github.event.pull_request.head.ref || github.ref_name }}` 分支的快照 [**`${{ needs.beta-version.outputs.short_commit_hash }}`**](https://github.com/${{ github.repository }}/commit/${{ needs.beta-version.outputs.short_commit_hash }}) 所构建的。
 
             你可以通过以下命令安装该版本：
             ```
