--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -86,11 +86,29 @@ jobs:
         run: |
           echo "commit_msg=$(git log origin/${{ github.ref_name }} -1 --pretty=format:'%s')" >> $GITHUB_ENV
 
-  publish-npm:
+  publish:
     runs-on: ubuntu-latest
     needs: [release, build]
     if: needs.release.outputs.releases_created == 'true'
     steps:
+      - name: 获取token
+        uses: actions/create-github-app-token@v2
+        id: app-token
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.APP_PRIVATE_KEY }}
+
+      - name: 获取用户ID
+        id: get-user-id
+        run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+
+      - name: 设置用户信息
+        run: |
+          git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
+          git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com'
+
       - name: 导入构建产物
         uses: actions/download-artifact@v4
         with:
@@ -98,10 +116,24 @@ jobs:
           path: ./
 
       - name: 发布到 NPM
+        id: publish-to-npm
         uses: JS-DevTools/npm-publish@v3
         with:
           token: ${{ secrets.NPM_TOKEN }}
           registry: https://registry.npmjs.org/
           access: public
           provenance: true
+
+      - name: 设置包名
+        run: |
+          pnpm pkg set name=@${{ github.repository_owner }}/${{ steps.publish-to-npm.outputs.package_name }}
+
+      - name: 发布到 GitHub Packages
+        id: publish-to-github
+        uses: JS-DevTools/npm-publish@v3
+        with:
+          token: ${{ steps.app-token.outputs.token }}
+          registry: "https://npm.pkg.github.com"
+
+        
 
