--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -91,24 +91,6 @@ jobs:
     needs: [release, build]
     if: needs.release.outputs.releases_created == 'true'
     steps:
-      - name: 获取token
-        uses: actions/create-github-app-token@v2
-        id: app-token
-        with:
-          app-id: ${{ secrets.APP_ID }}
-          private-key: ${{ secrets.APP_PRIVATE_KEY }}
-
-      - name: 获取用户ID
-        id: get-user-id
-        run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
-        env:
-          GH_TOKEN: ${{ steps.app-token.outputs.token }}
-
-      - name: 设置用户信息
-        run: |
-          git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
-          git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com'
-
       - name: 导入构建产物
         uses: actions/download-artifact@v4
         with:
@@ -138,7 +120,7 @@ jobs:
         id: publish-to-github
         uses: JS-DevTools/npm-publish@v3
         with:
-          token: ${{ steps.app-token.outputs.token }}
+          token: ${{ secrets.GITHUB_TOKEN }}}
           registry: "https://npm.pkg.github.com"
 
         
