ci: 调整 GitHub Actions 权限设置
- 新增 packages 权限设置为 write

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,9 +7,9 @@ on:
       - main
 
 permissions:
-  contents: write
+  contents: read
   id-token: write
-  pull-requests: write
+  packages: write
 
 jobs:
   release:
