--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -120,7 +120,7 @@ jobs:
         id: publish-to-github
         uses: JS-DevTools/npm-publish@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}}
+          token: ${{ secrets.GITHUB_TOKEN }}
           registry: "https://npm.pkg.github.com"
 
         
