ci(release): 更新发布流程并修改包名
- 在 release-beta.yaml 中增加了对 release-please 分支的处理逻辑
- 在 release.yaml 中增加了获取包名的独立步骤
- 修改了构建和发布流程，支持发布到 GitHub Packages 和 npm
- 更新了 package.json 中的包名和作者信息

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "git-neko-kit",
+  "name": "@clarityjs/git-neko-kit",
   "version": "0.4.4",
   "description": "Github, Gitee, GitCode API封装库",
   "keywords": [
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/ClarityJS/git-neko-kit.git"
   },
   "license": "GNU AGPL-3.0",
-  "author": "wuliya",
+  "author": "ClarityJS",
   "type": "module",
   "exports": {
     ".": {
