--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -46,7 +46,7 @@ jobs:
 
   build:
     outputs:
-      package_name: ${{ steps.build-package.outputs.package_name }}
+      package_name: ${{ steps.get-package-name.outputs.name }}
     needs: release
     if: needs.release.outputs.releases_created == 'true'
     runs-on: ubuntu-latest
@@ -64,6 +64,12 @@ jobs:
           run_install: |
             - args: [--no-frozen-lockfile]
 
+      - name: 获取包名
+        id: get-package-name
+        run: |
+          PACKAGE_NAME=$(pnpm pkg get name | tr -d '"' | awk -F'/' '{print $2}')
+          echo "name=$PACKAGE_NAME" >> $GITHUB_OUTPUT
+
       - name: 构建
         id: build-package
         run: |
@@ -71,14 +77,11 @@ jobs:
           pnpm pkg delete devDependencies
           mkdir -p ${{ runner.temp }}/temp/
           cp -r package.json README.md CHANGELOG.md dist ${{ runner.temp }}/temp/
-          PACKAGE_NAME=$(pnpm pkg get name | tr -d '"')
-          echo "PACKAGE_NAME=$PACKAGE_NAME" >> $GITHUB_ENV
-          echo "PACKAGE_NAME=$PACKAGE_NAME" >> $GITHUB_OUTPUT
 
       - name: 上传构建产物
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.PACKAGE_NAME }}
+          name: ${{ steps.get-package-name.outputs.name }}
           path: ${{ runner.temp }}/temp/
       
       - name: 获取主分支的最新提交消息
@@ -86,7 +89,25 @@ jobs:
         run: |
           echo "commit_msg=$(git log origin/${{ github.ref_name }} -1 --pretty=format:'%s')" >> $GITHUB_ENV
 
-  publish:
+  publish-to-github:
+    runs-on: ubuntu-latest
+    needs: [release, build]
+    if: needs.release.outputs.releases_created == 'true'
+    steps:
+      - name: 导入构建产物
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ needs.build.outputs.package_name }}
+          path: ./
+
+      - name: 发布到 GitHub Packages
+        id: publish-to-github
+        uses: JS-DevTools/npm-publish@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          registry: "https://npm.pkg.github.com"
+
+  publish-to-npm:
     runs-on: ubuntu-latest
     needs: [release, build]
     if: needs.release.outputs.releases_created == 'true'
@@ -103,6 +124,10 @@ jobs:
           version: 9.13.2
           run_install: false
 
+      - name: 设置包名
+        run: |
+          pnpm pkg set name=@${{ needs.build.outputs.package_name }}
+
       - name: 发布到 NPM
         id: publish-to-npm
         uses: JS-DevTools/npm-publish@v3
@@ -111,17 +136,6 @@ jobs:
           registry: https://registry.npmjs.org/
           access: public
           provenance: true
-
-      - name: 设置包名
-        run: |
-          pnpm pkg set name=@${{ github.repository_owner }}/${{ steps.publish-to-npm.outputs.name }}
-
-      - name: 发布到 GitHub Packages
-        id: publish-to-github
-        uses: JS-DevTools/npm-publish@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          registry: "https://npm.pkg.github.com"
 
         
 
