--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -45,11 +45,12 @@ jobs:
           manifest-file: .release-please-manifest.json
 
   build:
-    outputs:
-      package_name: ${{ steps.get-package-name.outputs.name }}
     needs: release
     if: needs.release.outputs.releases_created == 'true'
     runs-on: ubuntu-latest
+    outputs:
+      package_name: ${{ steps.get-package-name.outputs.name }}
+      package_short_name: ${{ steps.get-package-name.outputs.PACKAGE_SHORT_NAME }}
     steps:
       - name: 检出代码
         uses: actions/checkout@v4
@@ -67,8 +68,10 @@ jobs:
       - name: 获取包名
         id: get-package-name
         run: |
-          PACKAGE_NAME=$(pnpm pkg get name | tr -d '"' | awk -F'/' '{print $2}')
-          echo "name=$PACKAGE_NAME" >> $GITHUB_OUTPUT
+          PACKAGE_NAME=$(pnpm pkg get name | tr -d '"')
+          PACKAGE_SHORT_NAME=$(pnpm pkg get name | tr -d '"' | awk -F'/' '{print $2}')
+          echo "PACKAGE_SHORT_NAME=$PACKAGE_SHORT_NAME" >> $GITHUB_OUTPUT
+          echo "PACKAGE_NAME=$PACKAGE_NAME" >> $GITHUB_OUTPUT
 
       - name: 构建
         id: build-package
@@ -81,7 +84,7 @@ jobs:
       - name: 上传构建产物
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ steps.get-package-name.outputs.name }}
+          name: ${{ steps.get-package-name.outputs.PACKAGE_SHORT_NAME }}
           path: ${{ runner.temp }}/temp/
       
       - name: 获取主分支的最新提交消息
@@ -92,12 +95,11 @@ jobs:
   publish-to-github:
     runs-on: ubuntu-latest
     needs: [release, build]
-    if: needs.release.outputs.releases_created == 'true'
     steps:
       - name: 导入构建产物
         uses: actions/download-artifact@v4
         with:
-          name: ${{ needs.build.outputs.package_name }}
+          name: ${{ needs.build.outputs.package_short_name }}
           path: ./
 
       - name: 发布到 GitHub Packages
@@ -110,12 +112,11 @@ jobs:
   publish-to-npm:
     runs-on: ubuntu-latest
     needs: [release, build]
-    if: needs.release.outputs.releases_created == 'true'
     steps:
       - name: 导入构建产物
         uses: actions/download-artifact@v4
         with:
-          name: ${{ needs.build.outputs.package_name }}
+          name: ${{ needs.build.outputs.package_short_name }}
           path: ./
 
       - name: 设置 pnpm
