--- a/.github/workflows/release-beta.yaml
+++ b/.github/workflows/release-beta.yaml
@@ -4,8 +4,11 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    types: [opened, reopened, synchronize]
+  pull_request_target:
+    types: 
+    - opened
+    - reopened
+    - synchronize
     branches:
       - '!release-please*'
   workflow_dispatch:
@@ -31,7 +34,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.ref || github.ref_name }}
+          ref: ${{ github.event.pull_request_target.head.ref || github.ref_name }}
 
       - name: 设置 pnpm
         uses: pnpm/action-setup@v4
@@ -41,10 +44,10 @@ jobs:
       - name: 生成 Beta 版本号
         id: set-version
         run: |
-          branch=${{ github.event.pull_request.head.ref || github.ref_name }}
+          branch=${{ github.event.pull_request_target.head.ref || github.ref_name }}
           git fetch origin $branch --depth=100
           git checkout $branch
-          RELEASE_BRANCH="release-please--branches--main--components--karin-plugin-meme"
+          RELEASE_BRANCH="release-please--branches--main--components--git-neko-kit"
           if git ls-remote --heads origin $RELEASE_BRANCH | grep -q $RELEASE_BRANCH; then
             git fetch origin $RELEASE_BRANCH --depth=1
             git checkout FETCH_HEAD -- package.json
@@ -68,7 +71,7 @@ jobs:
       - name: 获取分支的最新提交哈希
         id: get-sha
         run: |
-          branch=${{ github.event.pull_request.head.ref || github.ref_name }}
+          branch=${{ github.event.pull_request_target.head.ref || github.ref_name }}
           git fetch --depth=1 origin $branch
           SHORT_COMMIT_HASH=$(git rev-parse --short FETCH_HEAD)
           echo "SHORT_COMMIT_HASH=$SHORT_COMMIT_HASH" >> $GITHUB_ENV
@@ -78,7 +81,7 @@ jobs:
       - name: 获取构建时间
         id: get-build-timestamp
         run: |
-          branch=${{ github.event.pull_request.head.ref || github.ref_name }}
+          branch=${{ github.event.pull_request_target.head.ref || github.ref_name }}
           git fetch origin $branch --depth=1
           BUILD_TIMESTAMP_UTC=$(git show -s --format=%cd --date=iso-strict origin/$branch)
           echo "BUILD_TIMESTAMP_UTC=$BUILD_TIMESTAMP_UTC"
@@ -95,7 +98,7 @@ jobs:
       - name: 检出代码
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.pull_request.head.ref || github.ref_name }}
+          ref: ${{ github.event.pull_request_target.head.ref || github.ref_name }}
 
       - name: 设置 pnpm
         uses: pnpm/action-setup@v4
@@ -120,7 +123,7 @@ jobs:
       - name: 获取主分支的最新提交消息
         id: commit-message
         run: |
-          echo "commit_msg=$(git log origin/${{ github.event.pull_request.head.ref || github.ref_name }} -1 --pretty=format:'%s')" >> $GITHUB_ENV
+          echo "commit_msg=$(git log origin/${{ github.event.pull_request_target.head.ref || github.ref_name }} -1 --pretty=format:'%s')" >> $GITHUB_ENV
 
   publish-to-pkg-pr-new:
     needs: [beta-version, build]
@@ -177,14 +180,14 @@ jobs:
 
 
       - name: 发布 PR 评论
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request_target'
         uses: thollander/actions-comment-pull-request@v3
         with:
           github-token: ${{ steps.app-token.outputs.token }}
-          pr-number: ${{ github.event.pull_request.number }}
+          pr-number: ${{ github.event.pull_request_target.number }}
           message: |
             🎉 🎉 🎉 **构建完成！**
-            该版本是基于 `${{ github.event.pull_request.head.ref || github.ref_name }}` 分支的快照 [**`${{ needs.beta-version.outputs.short_commit_hash }}`**](https://github.com/${{ github.repository }}/commit/${{ needs.beta-version.outputs.short_commit_hash }}) 所构建的。
+            该版本是基于 `${{ github.event.pull_request_target.head.ref || github.ref_name }}` 分支的快照 [**`${{ needs.beta-version.outputs.short_commit_hash }}`**](https://github.com/${{ github.repository }}/commit/${{ needs.beta-version.outputs.short_commit_hash }}) 所构建的。
 
             你可以通过以下命令安装该版本：
             ```
