--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "git",
     "github",
     "gitee",
-    "gitcode"
+    "gitcode",
+    "git-api-kit"
   ],
   "repository": {
     "type": "git",
@@ -45,17 +46,22 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "color-convert": "^3.1.0",
     "dayjs": "^1.11.13",
     "git-url-parse": "^16.0.1",
     "http-proxy-agent": "^7.0.2",
     "https-proxy-agent": "^7.0.6",
     "jsonwebtoken": "^9.0.2",
+    "language-colors": "^2.1.55",
+    "lodash": "^4.17.21",
     "socks-proxy-agent": "^8.0.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/color": "^4.2.0",
     "@types/git-url-parse": "^9.0.3",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.13",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
