refactor: 优化项目结构和打包配置
- 移除 src/index.ts 中的冗余空行
- 重构 root.ts 中的路径定义，提高可读性
- 简化 tsup.config.ts 中的打包配置，移除不必要的目录操作

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/esm/index.mjs",
+      "import": "./dist/index.mjs",
       "types": "./dist/index.d.ts",
-      "require": "./dist/cjs/index.cjs"
+      "require": "./dist/index.cjs"
     },
     "./axios": {
       "types": "./dist/exports/axios.d.ts",
