--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -82,10 +82,6 @@ jobs:
           name: ${{ steps.get-package-name.outputs.PACKAGE_SHORT_NAME }}
           path: ${{ runner.temp }}/temp/
       
-      - name: 获取主分支的最新提交消息
-        id: commit-message
-        run: |
-          echo "commit_msg=$(git log origin/${{ github.ref_name }} -1 --pretty=format:'%s')" >> $GITHUB_ENV
 
   publish-to-github:
     runs-on: ubuntu-latest
@@ -103,6 +99,12 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           registry: "https://npm.pkg.github.com"
+
+      - name: 生成发布摘要
+        run: |
+          echo "## 发布信息 :" >> $GITHUB_STEP_SUMMARY
+          echo "包名: \`${{ steps.publish-to-github.outputs.name }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "版本号: \`${{ steps.publish-to-github.outputs.version }}\`" >> $GITHUB_STEP_SUMMARY
 
   publish-to-npm:
     runs-on: ubuntu-latest
@@ -123,5 +125,18 @@ jobs:
           access: public
           provenance: true
 
-        
+      - name: 生成发布摘要
+        run: |
+          echo "## 发布信息 :" >> $GITHUB_STEP_SUMMARY
+          echo "包名: \`${{ steps.publish-to-npm.outputs.name }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "版本号: \`${{ steps.publish-to-npm.outputs.version }}\`" >> $GITHUB_STEP_SUMMARY
+
+  syncn:
+    runs-on: ubuntu-latest
+    needs:
+      [publish-to-github, publish-to-github]
+    steps:
+      - name: 同步镜像源
+        run: |
+          curl -X PUT "https://registry-direct.npmmirror.com/-/package/@candriajs/git-neko-kit/syncs"
 
