ci(release): 修正同步镜像源的依赖项

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -134,7 +134,7 @@ jobs:
   syncn:
     runs-on: ubuntu-latest
     needs:
-      [publish-to-github, publish-to-github]
+      [publish-to-github, publish-to-npm]
     steps:
       - name: 同步镜像源
         run: |
