perf(github): 优化获取仓库默认分支功能并添加远程仓库支持
- 新增 get_remote_repo_default_branch 函数，用于获取远程仓库的默认分支
- 修改 get_repo_default_branch 方法，优先使用远程仓库信息获取默认分支
- 优化错误处理和边界情况判断

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "jsonwebtoken": "^9.0.2",
     "language-colors": "^2.1.55",
     "lodash-es": "^4.17.21",
+    "simple-git": "^3.27.0",
     "socks-proxy-agent": "^8.0.5",
     "uuid": "^11.1.0"
   },
