build: 添加 dayjs、lodash 和 simple-git 的类型导出
- 新增 dayjs.ts、lodash.ts 和 simple-git.ts 文件
- 在 dayjs.ts 中导出 dayjs 默认模块
- 在 lodash.ts 中导出 lodash-es 全部模块
- 在 simple-git.ts 中导出 simple-git 全部模块和默认模块

--- a/package.json
+++ b/package.json
@@ -26,6 +26,21 @@
       "types": "./dist/exports/axios.d.ts",
       "import": "./dist/exports/axios.mjs",
       "require": "./dist/exports/axios.cjs"
+    },
+     "./simple-git": {
+      "types": "./dist/exports/simple-git.d.ts",
+      "import": "./dist/exports/simple-git.mjs",
+      "require": "./dist/exports/simple-git.cjs"
+    },
+     "./dayjs": {
+      "types": "./dist/exports/dayjs.d.ts",
+      "import": "./dist/exports/dayjs.mjs",
+      "require": "./dist/exports/dayjs.cjs"
+    },
+     "./lodash": {
+      "types": "./dist/exports/lodash.d.ts",
+      "import": "./dist/exports/lodash.mjs",
+      "require": "./dist/exports/lodash.cjs"
     }
   },
   "main": "./dist/index.mjs",
