--- a/tsconfig.module.json
+++ b/tsconfig.module.json
@@ -2,6 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist/exports",
-    "rootDir": "./src/exports"
+    "rootDir": "./src/exports",
+    "types": [
+      "@types/node",
+      "@types/lodash-es"
+    ],
   }
 }
