ci(deploy): 优化 GitHub Actions 部署流程
- 重构部署工作流，增加构建步骤，减少重复代码
- 添加构建产物上传和下载，提高部署效率
- 更新 Cloudflare Pages 部署配置，使用构建产物
- 新增 Deno Pages 部署步骤，支持多平台部署
- 优化 GitHub App token 生成，提高安全性

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,13 +13,16 @@ on:
 
 permissions:
   contents: read
+  id-token: write
 
 jobs:
-  deploy:
+  build:
     if: "!startsWith(github.head_ref, 'release-please')"
     runs-on: ubuntu-22.04
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
+    outputs:
+      app_token: ${{ steps.app_token.outputs.token }}
     steps:
       - name: 检出仓库
         uses: actions/checkout@v4
@@ -50,6 +53,29 @@ jobs:
         run: |
           pnpm build:docs
 
+      - name: 上传构建产物
+        uses: actions/upload-artifact@v4
+        with:
+          name: git-neko-kit
+          path: docs/.vuepress/dist
+
+  deploy-to-cloudflare-pages:
+    runs-on: ubuntu-22.04
+    needs: [build]
+    steps:
+      - name: 导入构建产物
+        uses: actions/download-artifact@v4
+        with:
+          name: git-neko-kit
+          path: ./
+
+      - name: 获取token
+        uses: actions/create-github-app-token@v2
+        id: app-token
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.APP_PRIVATE_KEY }}
+
       - name: 部署到 Cloudflare Pages
         id: deploy-cloudflare-pages
         uses: AdrianGonz97/refined-cf-pages-action@v1
@@ -58,8 +84,23 @@ jobs:
           accountId: ${{ secrets.CF_ID  }}
           githubToken: ${{ steps.app-token.outputs.token }}
           projectName: 'git-neko-kit'
-          directory: 'docs/.vuepress/dist'
+          directory: '.'
           deploymentName: cloudflare-pages
           wranglerVersion: '3.114.9'
-            
 
+  deploy-to-deno-pages:
+    runs-on: ubuntu-22.04
+    needs: [build]
+    steps:
+      - name: 导入构建产物
+        uses: actions/download-artifact@v4
+        with:
+          name: git-neko-kit
+          path: ./
+
+      - name: 部署到 Deno Pages
+        uses: denoland/deployctl@v1
+        with:
+          project: git-neko-kit
+          entrypoint: jsr:@std/http/file-server
+            
